2006-01-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/relocate.cc (setup_paths): mingw uses std string too.

	* lily/*.cc: various fixes for substr(ARG).

	* lily/sustain-pedal.cc (print): 

	* flower/file-name.cc (slashify): use std strings.

	* flower/string-convert.cc: remove publib.h

	* scm/define-markup-commands.scm (verbatim-file): new markup
	command \verbatim-file

	* Documentation/topdocs/NEWS.tely: fixup URLs

	* input/regression/alignment-vertical-manual-setting.ly (Module):
	new file.

	* lily/align-interface.cc (align_elements_to_extents): overwrite
	translations with numbers in alignment-offsets from left bound

	* scm/page.scm (make-page-stencil): read X-offset from paper-system.
	(page-translate-systems): new function: take into account Y-offset.

	* Documentation/topdocs/NEWS.tely (Top): document new features.

	* input/regression/page-layout-manual-position.ly (Module): new
	file.

2006-01-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/file-path.cc (path::parse_path): Oops.

	* Finish std::string interface.  For now, use std:: marker
	throughout for easy s/r.

2006-01-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/putting.itely (Score is a single musical
	expression): typo.
	(Score is a single musical expression): more typos.

	* scm/page.scm (annotate-space-left): thinko.
	(annotate-page): more thinkos.

2006-01-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/layout-page-layout.scm (write-page-breaks): record tweaks
	for different \score blocks separately.
	(post-process-pages): put write-page-layout into paper block.

	* lily/output-def.cc (get_parser): new file.

	* lily/output-def-scheme.cc (LY_DEFINE): ly:output-def-parser, new
	file.

	* lily/include/output-def.hh (class Output_def): add parser_ member.

	* input/regression/page-layout-twopass.ly (Module): new file.

	* scm/lily.scm: remove cpp hack.

	* lily/lyric-engraver.cc (get_voice_to_lyrics): use NPOS everywhere.
