@@ -1,3 +1,7 @@
+2006-01-26  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* Fix -DSTRING_UTILS_INLINED.
+
 2006-01-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/relocate.cc (setup_paths): mingw uses std string too.
